--- a/src/app/modules/admin/customers/customers.component.css
+++ b/src/app/modules/admin/customers/customers.component.css
@@ -127,3 +127,11 @@ input:checked+.slider:before {
         width: 50%;
     }
 }
+
+.ml-10 {
+    margin-left: 10px;
+}
+
+.mr-10 {
+    margin-right: 10px;
+}
