--- a/src/app/modules/admin/portal/portal.component.html
+++ b/src/app/modules/admin/portal/portal.component.html
@@ -1,7 +1,7 @@
 <section class="portail-block">
     <div class="container">
         <div class="title-row">
-            <h2>Home</h2>
+            <h2>{{'home' | translate}}</h2>
         </div>
         <div class="wrap">
             <div class="listing d-flex flex-wrap">
