--- a/src/app/modules/home/products/products.component.html
+++ b/src/app/modules/home/products/products.component.html
@@ -1,7 +1,7 @@
 <section class="place-order-block">
     <div class="container">
         <div class="top-row">
-            <h3>Place an order</h3>
+            <h3>{{'placeOrder' | translate}}</h3>
             <form>
                 <input type="search" name="" [(ngModel)]="search" placeholder="{{'search' | translate}}" [ngModelOptions]="{standalone: true}">
             </form>
@@ -11,15 +11,15 @@
                 <div class="number po-col">{{'productNumber' | translate}}</div>
                 <div class="name po-col">{{'productName' | translate}}</div>
                 <div class="img po-col">{{'productImage' | translate}}</div>
-                <div class="qty po-col">Quantity</div>
+                <div class="qty po-col">{{'quantity' | translate}}</div>
                 <div class="action po-col">Action</div>
             </div>
             <div class="pod-data-row" *ngFor="let item of products | filter:search; let i = index">
-                <div class="number po-col">Product {{i + 1}}</div>
+                <div class="number po-col">{{'product' | translate}} {{i + 1}}</div>
                 <div class="name po-col">{{item.product_name}}</div>
                 <div class="img po-col" (click)="onImageClick(item)"><img src="{{item.imageUrl}}" alt=""></div>
                 <div class="qty po-col">
-                    <span>Quantity</span>
+                    <span>{{'quantity' | translate}}</span>
                     <div class="qtybox">
                         <button type="button" id="add" class="add" (click)="updateAddCart(item, 'remove')">-</button>
                         <input type="number" id="1" [value]=item.quantity min="1" max="100" />
@@ -27,12 +27,11 @@
 
                     </div>
                 </div>
-                <div class="action po-col"><span>Action</span><a href="javascript: void(0)" (click)="updateAddCart(item, 'add_to_cart')">Add to
-            cart</a></div>
+                <div class="action po-col"><span>Action</span><a href="javascript: void(0)" (click)="updateAddCart(item, 'add_to_cart')">{{'addToCart' | translate}}</a></div>
             </div>
         </div>
         <div class="bottom-btn">
-            <a href="javascript: void(0)" [routerLink]="['/home/confirm-order']">Place order</a>
+            <a href="javascript: void(0)" [routerLink]="['/home/confirm-order']">{{'placeOrder' | translate}}</a>
         </div>
     </div>
 </section>
