--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="ct-row d-flex flex-wrap">
                 <div class="lang"><a href="javascript: void(0)" (click)="changeLanguage()">{{selectedLanguage}}</a></div>
-                <div class="logout" *ngIf="!generalService.hideLinks"><a href="javascript: void(0)" (click)="handleLogout()">Log out</a></div>
+                <div class="logout" *ngIf="!generalService.hideLinks"><a href="javascript: void(0)" (click)="handleLogout()">{{'logOut' | translate}}</a></div>
             </div>
         </div>
     </div>
@@ -16,9 +16,9 @@
                 <div class="nav-toggle" (click)="showNav()" *ngIf="!generalService.hideLinks"><i></i></div>
                 <div class="menu" *ngIf="!generalService.hideLinks">
                     <ul>
-                        <li [routerLink]="['/home/portal']" routerLinkActive="active"><a href="javascript: void(0)">Home</a></li>
-                        <li [routerLink]="['/home/information']" routerLinkActive="active"><a href="javascript: void(0)">My Information</a></li>
-                        <li [routerLink]="['/home/products']" routerLinkActive="active"><a href="javascript: void(0)">Place an order</a></li>
+                        <li [routerLink]="['/home/portal']" routerLinkActive="active"><a href="javascript: void(0)">{{'home' | translate}}</a></li>
+                        <li [routerLink]="['/home/information']" routerLinkActive="active"><a href="javascript: void(0)">{{'myInfo' | translate}}</a></li>
+                        <li [routerLink]="['/home/products']" routerLinkActive="active"><a href="javascript: void(0)">{{'placeOrder' | translate}}</a></li>
                     </ul>
                 </div>
             </div>
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="ct-row d-flex flex-wrap">
                 <div class="lang"><a href="javascript: void(0)" (click)="changeLanguage()">{{selectedLanguage}}</a></div>
-                <div class="logout" *ngIf="!generalService.hideLinks"><a href="javascript: void(0)" (click)="handleLogout()">Log out</a></div>
+                <div class="logout" *ngIf="!generalService.hideLinks"><a href="javascript: void(0)" (click)="handleLogout()">{{'logOut' | translate}}</a></div>
             </div>
         </div>
     </div>
@@ -44,7 +44,7 @@
                 <div class="nav-toggle" (click)="showNav()" *ngIf="!generalService.hideLinks"><i></i></div>
                 <div class="menu" *ngIf="!generalService.hideLinks">
                     <ul>
-                        <li [routerLink]="['/admin/portal']" routerLinkActive="active"><a href="javascript: void(0)">Home</a></li>
+                        <li [routerLink]="['/admin/portal']" routerLinkActive="active"><a href="javascript: void(0)">{{'home' | translate}}</a></li>
                         <li [routerLink]="['/admin/customers']" routerLinkActive="active"><a href="javascript: void(0)">{{ 'manageCustomers' | translate }}</a></li>
                         <li [routerLink]="['/admin/products']" routerLinkActive="active"><a href="javascript: void(0)">{{'manageProducts' | translate}}</a></li>
                     </ul>
